不再是Property